--- a/src/main/resources/static/signup.html
+++ b/src/main/resources/static/signup.html
@@ -22,6 +22,10 @@
             display: block;
         }
 
+        .signuptopmargin {
+            margin-top: 20px;
+        }
+
     </style>
 
 </head>
@@ -87,61 +91,64 @@
             <div class="w-full container mx-auto flex flex-wrap items-center justify-between mt-0 px-2 py-3">
 
                 <a class="uppercase tracking-wide no-underline hover:no-underline font-bold text-gray-800 text-xl " href="#">
-                    Sign in
+                    Sign up
                 </a>
             </div>
         </nav>
     </div>
 
-
     <div class="font-[sans-serif]">
         <div class="flex fle-col items-center justify-center py-6 px-4">
             <div class="items-center gap-4 max-w-6xl w-full">
 
-                    <form class="space-y-4">
-
+                <form>
+                    <div class="grid sm:grid-cols-2 gap-y-7 gap-x-12">
                         <div>
-                            <label class="text-gray-800 text-sm mb-2 block">Email</label>
-                            <div class="relative flex items-center">
-                                <input name="username" type="text" required class="w-full text-sm text-gray-800 border border-gray-300 px-4 py-3 rounded-lg outline-blue-600" placeholder="Enter email" />
-
-                            </div>
+                            <label class="text-sm mb-2 block">이름</label>
+                            <input name="name" type="text" class="bg-gray-100 w-full text-sm px-4 py-3.5 rounded-md outline-blue-500" placeholder="이름을 입력하세요" />
                         </div>
                         <div>
-                            <label class="text-gray-800 text-sm mb-2 block">Password</label>
-                            <div class="relative flex items-center">
-                                <input name="password" type="password" required class="w-full text-sm text-gray-800 border border-gray-300 px-4 py-3 rounded-lg outline-blue-600" placeholder="Enter password" />
-
-                            </div>
+                            <label class="text-sm mb-2 block">우편번호</label>
+                            <input name="lname" type="text" class="bg-gray-100 w-full text-sm px-4 py-3.5 rounded-md outline-blue-500" placeholder="우편번호를 입력하세요" />
                         </div>
-
-                        <div class="flex flex-wrap items-center justify-between gap-4">
-                            <div class="flex items-center">
-                                <input id="remember-me" name="remember-me" type="checkbox" class="h-4 w-4 shrink-0 text-blue-600 focus:ring-blue-500 border-gray-300 rounded" />
-                                <label for="remember-me" class="ml-3 block text-sm text-gray-800">
-                                    Remember me
-                                </label>
-                            </div>
-
-                            <div class="text-sm">
-                                <a href="jajvascript:void(0);" class="text-gray-600 hover:underline font-semibold">
-                                    Forgot your password?
-                                </a>
-                            </div>
+                        <div>
+                            <label class="text-sm mb-2 block">이메일</label>
+                            <input name="email" type="text" class="bg-gray-100 w-full text-sm px-4 py-3.5 rounded-md outline-blue-500" placeholder="이메일을 입력하세요" />
                         </div>
-
-                        <div class="!mt-8">
-                            <button type="button" class="w-full shadow-xl py-3 px-4 text-sm font-semibold tracking-wide rounded-lg text-white bg-gray-600 hover:bg-gray-700 focus:outline-none">
-                                Log in
-                            </button>
+                        <div>
+                            <label class="text-sm mb-2 block">도로명 주소</label>
+                            <input name="number" type="number" class="bg-gray-100 w-full text-sm px-4 py-3.5 rounded-md outline-blue-500" placeholder="도로명 주소를 입력하세요" />
                         </div>
+                        <div>
+                            <label class="text-sm mb-2 block">비밀번호</label>
+                            <input name="password" type="password" class="bg-gray-100 w-full text-sm px-4 py-3.5 rounded-md outline-blue-500" placeholder="비밀번호를 입력하세요" />
+                        </div>
+                        <div>
+                            <label class="text-sm mb-2 block">상세주소</label>
+                            <input name="name" type="text" class="bg-gray-100 w-full text-sm px-4 py-3.5 rounded-md outline-blue-500" placeholder="상세주소를 입력하세요" />
+                        </div>
+                        <div>
+                            <label class="text-sm mb-2 block">비밀번호 확인</label>
+                            <input name="name" type="text" class="bg-gray-100 w-full text-sm px-4 py-3.5 rounded-md outline-blue-500" placeholder="비밀번호를 입력하세요" />
+                        </div>
+                        <div>
+                            <label class="text-sm mb-2 block">전화번호</label>
+                            <input name="cpassword" type="password" class="bg-gray-100 w-full text-sm px-4 py-3.5 rounded-md outline-blue-500" placeholder="전화번호를 입력하세요" />
+                        </div>
+                    </div>
 
-                        <p class="text-sm !mt-8 text-center text-gray-800">Don't have an account <a href="javascript:void(0);" class="text-gray-600 font-semibold hover:underline ml-1 whitespace-nowrap">Register here</a></p>
-                    </form>
-                </div>
+                    <div class="!mt-10">
+                        <button type="button" class="signuptopmargin min-w-[150px] py-3 px-4 text-sm font-semibold tracking-wide rounded-lg text-white bg-gray-600 hover:bg-gray-700 focus:outline-none">
+                            Sign up
+                        </button>
+                    </div>
+
+                </form>
 
             </div>
+
         </div>
+    </div>
 
 
 </section>
