--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -22,6 +22,11 @@
             display: block;
         }
 
+        .loginbottommargin {
+            margin-bottom: 160px;
+            margin-top: 20px;
+        }
+
     </style>
 
 </head>
@@ -95,8 +100,8 @@
 
 
     <div class="font-[sans-serif]">
-        <div class="flex fle-col items-center justify-center py-6 px-4">
-            <div class="items-center gap-4 max-w-6xl w-full">
+        <div class="loginbottommargin flex fle-col items-center justify-center py-6 px-4">
+            <div class="items-center gap-4 max-w-2xl w-full">
 
                     <form class="space-y-4">
 
