--- a/src/main/resources/static/signup.html
+++ b/src/main/resources/static/signup.html
@@ -26,6 +26,10 @@
             margin-top: 20px;
         }
 
+        .signupbottommargin {
+            margin-bottom: 55px;
+        }
+
     </style>
 
 </head>
@@ -98,7 +102,7 @@
     </div>
 
     <div class="font-[sans-serif]">
-        <div class="flex fle-col items-center justify-center py-6 px-4">
+        <div class="signupbottommargin flex fle-col items-center justify-center py-6 px-4">
             <div class="items-center gap-4 max-w-6xl w-full">
 
                 <form>
